--- a/public/dashboard-v4.html
+++ b/public/dashboard-v4.html
@@ -462,6 +462,11 @@
     ::-webkit-scrollbar-thumb:hover {
       background: var(--primary-red);
     }
+
+    /* Animations */
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
@@ -545,7 +550,7 @@
     <div class="tabs">
       <button class="tab active" data-tab="overview">Übersicht</button>
       <button class="tab" data-tab="variables">Variablen</button>
-      <button class="tab" data-tab="connections">Verbindungen</button>
+      <button class="tab" data-tab="connections">ADS Routes</button>
       <button class="tab" data-tab="performance">Performance</button>
       <button class="tab" data-tab="logs">Live Logs</button>
       <button class="tab" data-tab="websocket">WebSocket Test</button>
@@ -606,9 +611,67 @@
 
     <!-- Connections Section -->
     <div class="content-section" id="connections">
+      <!-- Network Scanner -->
       <div class="card">
         <div class="card-header">
-          <h2 class="card-title">🔗 ADS Verbindungen</h2>
+          <h2 class="card-title">🔍 Network Scanner</h2>
+        </div>
+        <div style="padding: 0 1rem 1rem 1rem;">
+          <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin-bottom: 1.5rem;">
+            <div class="form-group">
+              <label class="form-label">Netzwerk (CIDR)</label>
+              <input type="text" id="network" class="form-input" value="192.168.3.0/24" placeholder="z.B. 192.168.1.0/24">
+            </div>
+          </div>
+
+          <div class="form-group" style="margin-bottom: 1.5rem;">
+            <label class="form-label">Port-Bereich zum Scannen</label>
+            <div style="display: flex; gap: 0.5rem; margin-bottom: 1rem; flex-wrap: wrap;">
+              <button class="btn btn-secondary btn-sm" onclick="setPortRange(800, 900)">Standard (800-900)</button>
+              <button class="btn btn-secondary btn-sm" onclick="setPortRange(851, 851)">Nur TC3 (851)</button>
+              <button class="btn btn-secondary btn-sm" onclick="setPortRange(801, 801)">Nur TC2 (801)</button>
+              <button class="btn btn-secondary btn-sm" onclick="setPortRange(48898, 48898)">System Service</button>
+              <button class="btn btn-secondary btn-sm" onclick="setPortRange(800, 1000)">Erweitert (800-1000)</button>
+            </div>
+            <div style="display: grid; grid-template-columns: 1fr auto 1fr; gap: 1rem; align-items: end;">
+              <div class="form-group">
+                <label class="form-label">Von Port</label>
+                <input type="number" id="portStart" class="form-input" value="800" min="1" max="65535">
+              </div>
+              <div style="padding-bottom: 0.75rem; font-size: 1.5rem; color: var(--text-secondary); text-align: center;">—</div>
+              <div class="form-group">
+                <label class="form-label">Bis Port</label>
+                <input type="number" id="portEnd" class="form-input" value="900" min="1" max="65535">
+              </div>
+            </div>
+          </div>
+
+          <button class="btn btn-primary" id="scanBtn" onclick="startNetworkScan()">
+            🚀 Scan starten
+          </button>
+
+          <div style="margin-top: 2rem; display: none;" id="scanProgressContainer">
+            <div style="width: 100%; height: 8px; background: var(--bg-dark); border-radius: 4px; overflow: hidden; margin-bottom: 1rem;">
+              <div style="height: 100%; background: linear-gradient(90deg, var(--primary-red), var(--light-red)); transition: width 0.3s ease; width: 0%;" id="scanProgressBar"></div>
+            </div>
+            <div style="text-align: center; color: var(--text-secondary); font-size: 0.875rem;" id="scanProgressText">Starte Scan...</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Scan Results -->
+      <div class="card" id="scanResultsCard" style="display: none;">
+        <div class="card-header">
+          <h2 class="card-title">📡 Gefundene Geräte</h2>
+          <div class="badge" id="scanDeviceCount" style="background: rgba(220, 38, 38, 0.2); padding: 0.5rem 1rem; border-radius: 20px;">0 Geräte</div>
+        </div>
+        <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 1.5rem; padding: 0 1rem 1rem 1rem;" id="scanDeviceGrid"></div>
+      </div>
+
+      <!-- Active Connections -->
+      <div class="card">
+        <div class="card-header">
+          <h2 class="card-title">🔗 Aktive ADS Verbindungen</h2>
           <button class="btn btn-primary btn-sm">➕ Verbindung hinzufügen</button>
         </div>
         <div id="connections-list"></div>
@@ -942,6 +1005,156 @@
     function refreshVariables() {
       loadData();
     }
+
+    // Network Scanner Functions
+    function setPortRange(start, end) {
+      document.getElementById('portStart').value = start;
+      document.getElementById('portEnd').value = end;
+    }
+
+    async function startNetworkScan() {
+      const network = document.getElementById('network').value;
+      const portStart = parseInt(document.getElementById('portStart').value);
+      const portEnd = parseInt(document.getElementById('portEnd').value);
+      const scanBtn = document.getElementById('scanBtn');
+      const progressContainer = document.getElementById('scanProgressContainer');
+      const progressBar = document.getElementById('scanProgressBar');
+      const progressText = document.getElementById('scanProgressText');
+      const resultsCard = document.getElementById('scanResultsCard');
+      const deviceGrid = document.getElementById('scanDeviceGrid');
+
+      if (!network) {
+        addLog('error', 'Bitte Netzwerk eingeben!');
+        return;
+      }
+
+      if (portStart > portEnd) {
+        addLog('error', 'Start-Port muss kleiner oder gleich End-Port sein!');
+        return;
+      }
+
+      // Reset UI
+      scanBtn.disabled = true;
+      scanBtn.innerHTML = '<span style="display: inline-block; width: 16px; height: 16px; border: 2px solid rgba(255, 255, 255, 0.3); border-radius: 50%; border-top-color: white; animation: spin 1s ease-in-out infinite; margin-right: 0.5rem;"></span>Scanne...';
+      progressContainer.style.display = 'block';
+      resultsCard.style.display = 'none';
+      deviceGrid.innerHTML = '';
+      progressBar.style.width = '0%';
+
+      addLog('info', `Starte Netzwerk-Scan: ${network} (Ports ${portStart}-${portEnd})`);
+
+      try {
+        const response = await fetch('http://localhost:8080/api/ads/scan', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({
+            network,
+            fullPortScan: true,
+            portRangeStart: portStart,
+            portRangeEnd: portEnd
+          })
+        });
+
+        const reader = response.body.getReader();
+        const decoder = new TextDecoder();
+        let devices = [];
+
+        while (true) {
+          const { done, value } = await reader.read();
+          if (done) break;
+
+          const chunk = decoder.decode(value);
+          const lines = chunk.split('\n');
+
+          for (const line of lines) {
+            if (line.startsWith('data: ')) {
+              const data = JSON.parse(line.substring(6));
+              
+              if (data.complete) {
+                devices = data.devices || [];
+                displayScanResults(devices);
+                addLog('success', `Scan abgeschlossen: ${devices.length} Gerät(e) gefunden`);
+              } else {
+                // Update progress
+                const percent = Math.round((data.scanned / data.total) * 100);
+                progressBar.style.width = percent + '%';
+                progressText.textContent = `${data.scanned} / ${data.total} Hosts gescannt - ${data.found} Geräte gefunden`;
+              }
+            }
+          }
+        }
+
+      } catch (error) {
+        console.error('Scan error:', error);
+        addLog('error', 'Scan fehlgeschlagen: ' + error.message);
+      } finally {
+        scanBtn.disabled = false;
+        scanBtn.innerHTML = '🚀 Scan starten';
+        progressContainer.style.display = 'none';
+      }
+    }
+
+    function displayScanResults(devices) {
+      const resultsCard = document.getElementById('scanResultsCard');
+      const deviceGrid = document.getElementById('scanDeviceGrid');
+      const deviceCount = document.getElementById('scanDeviceCount');
+
+      resultsCard.style.display = 'block';
+      deviceCount.textContent = `${devices.length} Gerät${devices.length !== 1 ? 'e' : ''}`;
+
+      if (devices.length === 0) {
+        deviceGrid.innerHTML = '<div style="grid-column: 1/-1; text-align: center; padding: 3rem; color: var(--text-secondary);">Keine ADS/TwinCAT Geräte gefunden 😕</div>';
+        return;
+      }
+
+      deviceGrid.innerHTML = devices.map(device => `
+        <div style="background: var(--bg-dark); border-radius: 12px; padding: 1.5rem; border: 1px solid var(--border); transition: all 0.3s ease;">
+          <div style="display: flex; justify-content: space-between; align-items: start; margin-bottom: 1rem;">
+            <div style="font-size: 1.25rem; font-weight: 700;">${device.name || device.ipAddress}</div>
+            <div class="badge badge-success">✓ Online</div>
+          </div>
+          <div style="display: flex; flex-direction: column; gap: 0.5rem;">
+            <div style="display: flex; justify-content: space-between; align-items: center; font-size: 0.875rem;">
+              <span style="color: var(--text-secondary);">IP-Adresse:</span>
+              <span style="font-weight: 600; font-family: 'Courier New', monospace;">${device.ipAddress}</span>
+            </div>
+            <div style="display: flex; justify-content: space-between; align-items: center; font-size: 0.875rem;">
+              <span style="color: var(--text-secondary);">Port:</span>
+              <span style="font-weight: 600; font-family: 'Courier New', monospace;">${device.port}</span>
+            </div>
+            <div style="display: flex; justify-content: space-between; align-items: center; font-size: 0.875rem;">
+              <span style="color: var(--text-secondary);">NetId:</span>
+              <span style="font-weight: 600; font-family: 'Courier New', monospace;">${device.netId}</span>
+            </div>
+            ${device.hostname ? `
+            <div style="display: flex; justify-content: space-between; align-items: center; font-size: 0.875rem;">
+              <span style="color: var(--text-secondary);">Hostname:</span>
+              <span style="font-weight: 600; font-family: 'Courier New', monospace;">${device.hostname}</span>
+            </div>
+            ` : ''}
+            <div style="display: flex; justify-content: space-between; align-items: center; font-size: 0.875rem;">
+              <span style="color: var(--text-secondary);">Runtime:</span>
+              <span class="badge" style="background: rgba(220, 38, 38, 0.2); color: var(--light-red);">${device.runtime || 'Unbekannt'}</span>
+            </div>
+            ${device.systemInfo ? `
+            <div style="margin-top: 0.5rem; font-size: 0.75rem; color: var(--text-secondary);">${device.systemInfo}</div>
+            ` : ''}
+          </div>
+        </div>
+      `).join('');
+    }
+
+    // Auto-fill network from API
+    fetch('http://localhost:8080/api/network/info')
+      .then(res => res.json())
+      .then(data => {
+        if (data.network) {
+          document.getElementById('network').value = data.network;
+        }
+      })
+      .catch(() => {});
 
     // Initial Load
     loadData();
